# gtfs-playground

./: Cargo.toml  README.md
export/: alerts.json  alerts.p.json  tripupdate.json  tripupdate.p.json  tripupdate.txt
export/gtfs_static/: agencies.json  calendar.json  calendar_dates.json  fare_attributes.json  fare_rules.json  feed_info.json  routes.json  stops.json
export/gtfs_static/pretty/: agencies.p.json  calendar.p.json  calendar_dates.p.json  fare_attributes.p.json  fare_rules.p.json  feed_info.p.json  routes.p.json  stops.p.json
src/: main.rs  sfbart_metrics.rs  utils.rs
src/gtfs_static/: ingest.rs
src/proto/: gtfs_rt_pb2.py  gtfsrt_raw.rs  mod.rs  transit_realtime.rs
