[package]
name = "gtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-rt = "0.4.0"
gtfs-structures = { version = "0.41.0", features = ["read-url"] }
prost = "0.12.3"
prost-build = "0.12.3"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
